syntax = "proto3";

package tasks;


import public "google/protobuf/timestamp.proto";
import public "google/protobuf/duration.proto";
// import "github.com/duolacloud/microbase/proto/api/api.proto";
import "proto/api/api.proto";

option go_package = "github.com/duolacloud/microbase/proto/tasks;tasks";

service TaskService {
  rpc Create(CreateTaskRequest) returns (CreateTaskResponse) {}
  rpc Update(UpdateTaskRequest) returns (UpdateTaskResponse) {}
  rpc Get(GetTaskRequest) returns (GetTasksResponse) {}
  rpc Delete(UpdateTaskRequest) returns (UpdateTaskResponse) {}
  rpc List(ListTasksRequest) returns (ListTasksResponse) {}
}

message CreateTaskRequest {
  string parent = 1;
  Task task = 2;
  ResponseView responseView = 3;
}

message CreateTaskResponse {

}

message GetTaskRequest {

}

message GetTasksResponse {

}

message UpdateTaskRequest {

}

message UpdateTaskResponse {

}

message ListTasksRequest {

}

message ListTasksResponse {
}

message ResponseView {

}

message Task {
  enum View {
    UNSPECIFIED = 0;
    BASIC = 1;
    FULL = 2;
  }
  string name = 1;

  google.protobuf.Timestamp scheduleTime = 3;
  google.protobuf.Timestamp createTime = 4;
  google.protobuf.Duration dispatchDeadline = 5;
  int32 dispatchCount = 6;
  int32 responseCount = 7;
  Attempt firstAttempt = 8;
  Attempt lastAttempt = 9;
  View view = 10;
  oneof payloadType {
    HttpRequest httpRequest = 11;
    PullMessage pullMessage = 12; 
  }
}

enum HttpMethod {
  HTTP_METHOD_UNSPECIFIED = 0;
  POST = 1;
  GET = 2;
  HEAD = 3;
  PUT = 4;
  DELETE = 5;
  PATCH = 6;
  OPTIONS = 7;
}

message HttpRequest {
  string url = 1;
  HttpMethod httpMethod = 2;
  map<string, string> headers = 3;
  bytes body = 4;
  oneof authorization_header {
    OAuthToken oauthToken = 5;
    OidcToken oidcToken = 6;
  }
}

message OAuthToken {
  string serviceAccount = 1;
  string scope = 2;
}

message OidcToken {
  string serviceAccount = 1;
  string audience = 2;
}

message PullMessage {
  bytes payload = 1;
  string tag = 2; 
}

message Attempt {
  google.protobuf.Timestamp scheduleTime = 1;
  google.protobuf.Timestamp dispatchTime = 2;
  google.protobuf.Timestamp responseTime = 3;
  api.Status responseStatus = 4;
}